log
Thu 14 Sep 2023 07:21:38 PM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:5: error: two or more data types in declaration specifiers
   43 |     void* auxkey1 = &key1;
      |     ^~~~
treemap.c:43:22: error: ‘key1’ undeclared (first use in this function)
   43 |     void* auxkey1 = &key1;
      |                      ^~~~
treemap.c:43:22: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:44:24: error: ‘key2’ undeclared (first use in this function)
   44 |     if (is_equal(key1, key2) != 0)
      |                        ^~~~
treemap.c:44:9: error: too few arguments to function ‘is_equal’
   44 |     if (is_equal(key1, key2) != 0)
      |         ^~~~~~~~
treemap.c:22:5: note: declared here
   22 | int is_equal(TreeMap* tree, void* key1, void* key2){
      |     ^~~~~~~~
treemap.c:43:11: error: unused variable ‘auxkey1’ [-Werror=unused-variable]
   43 |     void* auxkey1 = &key1;
      |           ^~~~~~~
treemap.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
   47 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d08d20d
Thu 14 Sep 2023 07:26:53 PM UTC: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:41: error: ‘key1’ undeclared (first use in this function)
   43 |     int resultado = newMap->lower_than(&key1, &key2);
      |                                         ^~~~
treemap.c:43:41: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:43:48: error: ‘key2’ undeclared (first use in this function)
   43 |     int resultado = newMap->lower_than(&key1, &key2);
      |                                                ^~~~
treemap.c:43:9: error: unused variable ‘resultado’ [-Werror=unused-variable]
   43 |     int resultado = newMap->lower_than(&key1, &key2);
      |         ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f078c5d
Thu 14 Sep 2023 07:33:30 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|8
total_score: 0/70
6b5d89f
Thu 14 Sep 2023 07:53:11 PM UTC: 
 treemap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:3: error: expected expression before ‘}’ token
   53 |   }
      |   ^
Compilation failed
f1e2830
Thu 14 Sep 2023 07:55:05 PM UTC: 
 treemap.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  3|8
total_score: 0/70
3d09ac1
Thu 14 Sep 2023 07:57:30 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
9e63ca5
Thu 14 Sep 2023 08:00:31 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
f4db230
Thu 14 Sep 2023 08:16:39 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
144d875
Thu 14 Sep 2023 08:20:48 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
01937ec
Thu 14 Sep 2023 08:21:28 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  11|6
total_score: 15/70
24b0718
Thu 14 Sep 2023 08:23:05 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:52:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   52 |   return NULL;
      |          ^~~~
treemap.c:49:6: note: declared here
   49 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a0b428f
Thu 14 Sep 2023 08:24:15 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
2cb5773
Thu 14 Sep 2023 08:33:43 PM UTC: 
 treemap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  12|6
total_score: 15/70
5117198
Thu 14 Sep 2023 08:35:04 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  12|6
total_score: 15/70
d18959b
Thu 14 Sep 2023 08:35:43 PM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  13|5
total_score: 25/70
512eab3
Thu 14 Sep 2023 08:40:33 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
3dfb9f3
Thu 14 Sep 2023 09:20:24 PM UTC: 
 treemap.c | 58 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 58 insertions(+)
 tests:  16|4
total_score: 30/70
4b99553
Thu 14 Sep 2023 09:25:08 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  17|4
total_score: 35/70
3af0955
Thu 14 Sep 2023 09:33:06 PM UTC: 
 treemap.c | 13 ++++---------
 1 file changed, 4 insertions(+), 9 deletions(-)
 tests:  17|4
total_score: 35/70
cb80518
Thu 14 Sep 2023 09:34:20 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  18|3
total_score: 40/70
1c09bc4
Thu 14 Sep 2023 09:39:12 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  18|3
total_score: 40/70
962d12b
Fri 15 Sep 2023 06:52:59 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  20|2
total_score: 45/70
2571cbe
Fri 15 Sep 2023 07:00:40 PM UTC: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  22|2
total_score: 50/70
e96712a
Fri 15 Sep 2023 07:03:20 PM UTC: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  22|2
total_score: 50/70
7c7ca53
Fri 15 Sep 2023 07:03:47 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  25|1
total_score: 60/70
01fb8b4
Fri 15 Sep 2023 07:11:09 PM UTC: 
 treemap.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:187:5: error: expected ‘;’ before ‘}’ token
  187 |     }
      |     ^
treemap.c:200:13: error: ‘ub_node’ undeclared (first use in this function); did you mean ‘ub_nod’?
  200 |             ub_node = current;
      |             ^~~~~~~
      |             ub_nod
treemap.c:200:13: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:210:1: error: expected ‘;’ before ‘}’ token
  210 | }
      | ^
treemap.c:190:15: error: unused variable ‘ub_nod’ [-Werror=unused-variable]
  190 |     TreeNode* ub_nod = NULL;
      |               ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
f9893aa
Fri 15 Sep 2023 07:11:27 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  25|1
total_score: 60/70
040e598
Fri 15 Sep 2023 07:13:20 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  25|1
total_score: 60/70
4d37d6a
Fri 15 Sep 2023 07:14:46 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  25|1
total_score: 60/70
b4f78b4
Fri 15 Sep 2023 07:16:03 PM UTC: 
 treemap.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
 tests:  25|1
total_score: 60/70
46845ed
Fri 15 Sep 2023 07:16:41 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  25|1
total_score: 60/70
832ba67
Fri 15 Sep 2023 07:17:50 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  25|1
total_score: 60/70
3e06f1a
